tablet whitespace fixed

--- a/css/main.css
+++ b/css/main.css
@@ -541,6 +541,10 @@ textarea {
         margin: 100px 0;
     }
 
+    body {
+      background-color: #202322;
+    }
+
     h2 {
       font-size: 2.25em;
       line-height: 1.333;
